k8s/socket-server/socket-server.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-server-depl
  namespace: socket-server
spec:
  selector:
    matchLabels:
      app: socket-server-depl
  template:
    metadata:
      labels:
        app: socket-server-depl
    spec:
      containers:
        - name: socket-server-depl
          image: synthiatelemed.azurecr.io/socket-server:3e0128d3d62dd3f3c837c79c4de9163676562cde
          resources:
            limits:
              memory: "256Mi"
            requests:
              memory: "64Mi"
              cpu: "10m"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
