k8s/socket-server/socket-server-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: socket-server-srv
  namespace: socket-server
spec:
  selector:
    app: socket-server-depl
  ports:
  - port: 3000
    targetPort: 3000
