k8s/socket-server/socket-server-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: socket-server-route
  namespace: socket-server
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`socket.synthia.tech`) && Path(`/healthcheck`)
    kind: Rule
    middlewares:
      - name: default-rate-limit-middleware
        namespace: default
    services:
    - name: socket-server-srv
      namespace: socket-server
      kind: Service
      port: 3000
  - match: Host(`socket.synthia.tech`) 
    kind: Rule
    middlewares:
      - name: default-rate-limit-middleware
        namespace: default
      - name: heimdall-auth-middleware
        namespace: heimdall
      - name: backend-api-headers-middleware
        namespace: backend-api
    services:
    - name: socket-server-srv
      namespace: socket-server
      kind: Service
      port: 3000
  tls:
    secretName: socket-tls
    domains: 
    - main: socket.synthia.tech
